fix line break in combat styles
Former-commit-id: 9550a283b345e493bb5c3ca9ebe1d28c749dcba4

--- a/character_sheet/second_page.less
+++ b/character_sheet/second_page.less
@@ -127,7 +127,7 @@
   width: 45%;
 
   .calc-header {
-      width: 5.5em;
+      width: 7em;
   }
 }
 .calc-skills:nth-child(3) {
